--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_DC=dc1
       - MAX_HEAP_SIZE=512M
-      - HEAP_NEWSIZE=100M
+      - HEAP_NEWSIZE=64M
     ports:
       - "9042:9042"
     healthcheck:
       test: [ "CMD-SHELL", "nodetool status" ]
-      interval: 20s
+      interval: 15s
       timeout: 10s
-      retries: 20
+      retries: 30
 
   cassandra-dc1-node2:
     container_name: cassandra-dc1-node2
@@ -27,14 +27,14 @@ services:
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_DC=dc1
       - MAX_HEAP_SIZE=512M
-      - HEAP_NEWSIZE=100M
+      - HEAP_NEWSIZE=64M
     ports:
       - "9043:9042"
     healthcheck:
       test: [ "CMD-SHELL", "nodetool status" ]
-      interval: 20s
+      interval: 15s
       timeout: 10s
-      retries: 20
+      retries: 30
     depends_on:
       cassandra-dc1-node1:
         condition: service_healthy
@@ -48,16 +48,58 @@ services:
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_DC=dc1
       - MAX_HEAP_SIZE=512M
-      - HEAP_NEWSIZE=100M
+      - HEAP_NEWSIZE=64M
     ports:
       - "9044:9042"
     healthcheck:
       test: [ "CMD-SHELL", "nodetool status" ]
-      interval: 20s
+      interval: 15s
       timeout: 10s
-      retries: 20
+      retries: 30
     depends_on:
       cassandra-dc1-node2:
+        condition: service_healthy
+
+  cassandra-dc1-node4:
+    container_name: cassandra-dc1-node4
+    image: cassandra:latest
+    environment:
+      - CASSANDRA_SEEDS=cassandra-dc1-node1, cassandra-dc1-node2
+      - CASSANDRA_CLUSTER_NAME=TestCluster
+      - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
+      - CASSANDRA_DC=dc1
+      - MAX_HEAP_SIZE=512M
+      - HEAP_NEWSIZE=64M
+    ports:
+      - "9045:9042"
+    healthcheck:
+      test: [ "CMD-SHELL", "nodetool status" ]
+      interval: 15s
+      timeout: 10s
+      retries: 30
+    depends_on:
+      cassandra-dc1-node3:
+        condition: service_healthy
+
+  cassandra-dc1-node5:
+    container_name: cassandra-dc1-node5
+    image: cassandra:latest
+    environment:
+      - CASSANDRA_SEEDS=cassandra-dc1-node1, cassandra-dc1-node2
+      - CASSANDRA_CLUSTER_NAME=TestCluster
+      - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
+      - CASSANDRA_DC=dc1
+      - MAX_HEAP_SIZE=512M
+      - HEAP_NEWSIZE=64M
+    ports:
+      - "9046:9042"
+    healthcheck:
+      test: [ "CMD-SHELL", "nodetool status" ]
+      interval: 15s
+      timeout: 10s
+      retries: 30
+    depends_on:
+      cassandra-dc1-node4:
         condition: service_healthy
 
   cassandra-dc2-node1:
@@ -69,16 +111,16 @@ services:
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_DC=dc2
       - MAX_HEAP_SIZE=512M
-      - HEAP_NEWSIZE=100M
+      - HEAP_NEWSIZE=64M
     ports:
-      - "9045:9042"
+      - "9047:9042"
     healthcheck:
       test: [ "CMD-SHELL", "nodetool status" ]
-      interval: 20s
+      interval: 15s
       timeout: 10s
-      retries: 20
+      retries: 30
     depends_on:
-      cassandra-dc1-node3:
+      cassandra-dc1-node5:
         condition: service_healthy
 
   cassandra-dc2-node2:
@@ -90,14 +132,14 @@ services:
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_DC=dc2
       - MAX_HEAP_SIZE=512M
-      - HEAP_NEWSIZE=100M
+      - HEAP_NEWSIZE=64M
     ports:
-      - "9046:9042"
+      - "9048:9042"
     healthcheck:
       test: [ "CMD-SHELL", "nodetool status" ]
-      interval: 20s
+      interval: 15s
       timeout: 10s
-      retries: 20
+      retries: 30
     depends_on:
       cassandra-dc2-node1:
         condition: service_healthy
@@ -111,9 +153,56 @@ services:
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_DC=dc2
       - MAX_HEAP_SIZE=512M
-      - HEAP_NEWSIZE=100M
+      - HEAP_NEWSIZE=64M
     ports:
-      - "9047:9042"
+      - "9049:9042"
+    healthcheck:
+      test: [ "CMD-SHELL", "nodetool status" ]
+      interval: 15s
+      timeout: 10s
+      retries: 30
     depends_on:
       cassandra-dc2-node2:
+        condition: service_healthy
+
+  cassandra-dc2-node4:
+    container_name: cassandra-dc2-node4
+    image: cassandra:latest
+    environment:
+      - CASSANDRA_SEEDS=cassandra-dc1-node1, cassandra-dc1-node2, cassandra-dc2-node1, cassandra-dc2-node2
+      - CASSANDRA_CLUSTER_NAME=TestCluster
+      - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
+      - CASSANDRA_DC=dc2
+      - MAX_HEAP_SIZE=512M
+      - HEAP_NEWSIZE=64M
+    ports:
+      - "9050:9042"
+    healthcheck:
+      test: [ "CMD-SHELL", "nodetool status" ]
+      interval: 15s
+      timeout: 10s
+      retries: 30
+    depends_on:
+      cassandra-dc2-node3:
+        condition: service_healthy
+
+  cassandra-dc2-node5:
+    container_name: cassandra-dc2-node5
+    image: cassandra:latest
+    environment:
+      - CASSANDRA_SEEDS=cassandra-dc1-node1, cassandra-dc1-node2, cassandra-dc2-node1, cassandra-dc2-node2
+      - CASSANDRA_CLUSTER_NAME=TestCluster
+      - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
+      - CASSANDRA_DC=dc2
+      - MAX_HEAP_SIZE=512M
+      - HEAP_NEWSIZE=64M
+    ports:
+      - "9051:9042"
+    healthcheck:
+      test: [ "CMD-SHELL", "nodetool status" ]
+      interval: 15s
+      timeout: 10s
+      retries: 30
+    depends_on:
+      cassandra-dc2-node4:
         condition: service_healthy
